--- a/nth.html
+++ b/nth.html
@@ -313,11 +313,11 @@
         /ip firewall mangle remove [find comment="LB By BNT"]<br>
         /ip firewall address-list remove [find comment="LB By BNT"]<br>
         /routing table remove [find comment="LB By BNT"]
-        <div style="margin-top:15px;">
-          © Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a>
+        <div style="margin-top:15px; padding-top:10px; border-top: 1px solid #555; text-align:center">
+          © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a>
+        </div>
         </div>
       </div>
-    </div>
     <div oncontextmenu="return false;" id="myLockScreen" class="lock-screen">
       <div id="center-screen" class="center-screen">Great! One Step Again <br>For Activate Your Member<br><button id="verify">VERIFY YOUR E-MAIL NOW</button></div>
     </div>
