--- a/wifid-wms-seamless.html
+++ b/wifid-wms-seamless.html
@@ -52,12 +52,12 @@
       button{color:#fff;background-color:#f60;border-color:#f60;border:none;padding:8px;width:110px;font-size:14px;font-weight:700;cursor:pointer;border-radius:5px;margin-bottom:5px}
       button:hover{background-color:#ccc;color:#111}
       .row:after{content:"";display:table;clear:both}
-      input[type=checkbox]{margin-right:7px}
-      input[type=text],select,textarea{width:100%;padding:5px;border:1px solid #ccc;border-radius:1px;resize:vertical;font-size:14px!important;border-radius:5px}
-      label{padding:8px 5px 5px;display:inline-block}
+      input[type=checkbox]{margin-right:7px;}
+      input[type=text],select,textarea{width:100%;padding:5px;border:1px solid #ccc;border-radius:1px;resize:vertical;font-size:14px!important;border-radius:5px;margin-bottom:10px}
+      label{padding-bottom:5px;display:inline-block}
       input[type=submit]{background-color:#f60;color:#fff;padding:13px 20px;border:none;border-radius:1px;cursor:pointer;float:right}
       input[type=submit]:hover{background-color:#45a049}
-      .list-output-content{height:525px;background:#fff;overflow:scroll;width:100%;padding:4px;margin-top:8px;border:1px solid #ccc;border-radius:5px;}
+      .list-output-content{height:530px;background:#fff;overflow:scroll;width:100%;padding:4px;margin-top:5px;border:1px solid #ccc;border-radius:5px;}
       .mikrotik-logo {display:none}
 	  @media screen and (max-width:700px) {
 	  .list-output-content{height:auto}	  
@@ -189,8 +189,7 @@
           <div style="clear: both;"></div>
           <input type="text" id="redirectid-wms" placeholder="http://www.msftconnecttest.com/redirect" value="http://www.msftconnecttest.com/redirect">
           <div style="clear: both;"></div>
-          <br>
-          <button style="margin-right:2px" type="button" onclick="myFunction()">Generate</button> 
+          <button style="margin-right:2px;margin-top:10px" type="button" onclick="myFunction()">Generate</button> 
           <button type="button" onclick="location.reload()">Clear All</button> 
           <br>
         </div>
@@ -288,7 +287,7 @@
             </table>
           </div>
           <br>
-          <button id="copyscript" type="button" onclick="selectElementContents(document.getElementById('showScript'))">Copy Script</button><span style="font-weight:500;margin-right:2px; float:right; padding-top:5px">[ <a target="_blank" href="https://1.bp.blogspot.com/-03W_oZJ_QXA/YNZ2PtmAEhI/AAAAAAAAZ18/atNJBMyXSDo2mo3ip3zng6y_9cEx-SV3QCLcBGAsYHQ/s1921/WMS%2Bauto%2Blogin%2Btutorial.jpg">View Tutorial</a> ]</span> 
+          <button id="copyscript" type="button" onclick="selectElementContents(document.getElementById('showScript'))">Copy Script</button><span style="font-weight:500;margin-right:2px; float:right; padding-top:5px">[ <a target="_blank" href="https://1.bp.blogspot.com/-03W_oZJ_QXA/YNZ2PtmAEhI/AAAAAAAAZ18/atNJBMyXSDo2mo3ip3zng6y_9cEx-SV3QCLcBGAsYHQ/s1921/WMS%2Bauto%2Blogin%2Btutorial.jpg">Tutorial</a> ]</span> 
         </div>
       </div>
       <div class="footer">
