--- a/vpn-game-generator2.html
+++ b/vpn-game-generator2.html
@@ -50,8 +50,8 @@
       button:hover{background-color:#ccc;color:#111}
       .row:after{content:"";display:table;clear:both}
       input[type=checkbox]{margin-right:7px}
-      input[type=text],select,textarea{width:100%;padding:5px;border:1px solid #ccc;border-radius:1px;resize:vertical;font-size:14px!important;border-radius:5px}
-      label{padding:5px;display:inline-block; font-weight:600; font-size:14px}
+      input[type=text],select,textarea{width:100%;padding:5px;border:1px solid #ccc;border-radius:1px;resize:vertical;font-size:14px!important;border-radius:5px; margin-bottom:10px}
+      label{padding-bottom:5px;display:inline-block; font-weight:600; font-size:14px}
       input[type=submit]{background-color:#f60;color:#fff;padding:13px 20px;border:none;border-radius:1px;cursor:pointer;float:right}
       input[type=submit]:hover{background-color:#45a049}
       .col-25{float:left;width:25%;margin-top:6px}
@@ -59,7 +59,7 @@
       .row:after{content:"";display:table;clear:both}
       .list-game{height:200px;background:#fff;overflow:scroll;overflow-x:hidden;width:100%;margin-top:2px;padding:3px;border:1px solid rgba(0,0,0,0.25);border-radius:5px}
       .list-game label{padding:0;display:inline-block; font-weight:normal; font-size:14px}
-      .list-output-content{border-radius:5px;height:600px;background:#fff;overflow:scroll;width:100%;padding:10px;margin-top:8px;border:1px solid #ccc;white-space:nowrap}
+      .list-output-content{border-radius:5px;height:605px;background:#fff;overflow:scroll;width:100%;padding:10px;margin-top:5px;border:1px solid #ccc;white-space:nowrap}
       table,tr,td{border:none}
       .mikrotik-logo {display:none}	  
       @media screen and (max-width:700px) {
@@ -138,7 +138,7 @@
           </div>
         </div>
         <div class="logo-left" style="float:left;"> 
-          <a href="https://buananetpbun.github.io/vpn-game-generator2.html"><img style="float:left; margin-top:-6px;margin-right:10px" height="40" width="50" src="./img/mylogo.png"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a>  
+          <a href="https://buananetpbun.github.io/vpn-game-generator2.html"><img alt="logo" style="float:left; margin-top:-6px;margin-right:10px" height="40" width="50" src="./img/mylogo.png"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a>  
         </div>
       </div>
       <div style="clear:both"></div>
@@ -161,11 +161,11 @@
           <input type="text" id="vpn-username" placeholder="username"><br>
           <label>VPN Password</label><br>
           <input type="text" id="vpn-password" placeholder="password">
-          <div style="margin-top:10px;margin-bottom:10px">
+
             <input onchange="myFunction()" type="checkbox" id="ip-gateway-check"><label for="ip-gateway-check" style="padding-left:0px">IP Gateway ISP Game (optional)</label>
             <input disabled type="text" id="ip-gateway-input" placeholder="example:192.168.2.1"><br>
-          </div>
-          <label>Select Mangle Games</label> <input type="text" id="myInput" onkeyup="myFunctionGames()" placeholder="find Game.."> 
+
+          <label>Select Mangle Games</label> <input style="margin-bottom:2px" type="text" id="myInput" onkeyup="myFunctionGames()" placeholder="find Game.."> 
           <div class="list-game">
             <table id="myTable">
               <!-- MOBILE GAMES -->
@@ -626,7 +626,7 @@
         /ip firewall mangle remove [find new-routing-mark="vpn-routing-game"]<br>
         /ip firewall raw remove [find address-list="List-IP-Games"]<br>
         /ip firewall address-list remove [find list="List-IP-Games"]
-        <div style="margin-top:15px">
+        <div style="margin-top:15px; padding-top:10px; border-top: 1px solid #555; text-align:center">
           © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a>
         </div>
       </div>
